2016-11-05  Philip Kendall  <philip-fuse@shadowmagic.org.uk>

        * libspectrum 1.3.1 released.

        * Change --without-gcrypt option to --without-libgcrypt (Sergio
          Baldoví).

2016-10-02  Philip Kendall  <philip-fuse@shadowmagic.org.uk>

        * libspectrum 1.3.0 released.

        * Fix some compilation warnings (Philip Kendall).

2016-08-21  Philip Kendall  <philip-fuse@shadowmagic.org.uk>

        * libspectrum 1.2.2 released.

        * Support for reading zip files (Patrik Rak and Sergio Baldoví).

        * Support for converting PZX data blocks with asymmetric pulses to TZX
          GDB blocks (Fredrick Meunier).

        * Various minor bug fixes/improvements:
          * Print summary of enabled features when building libspectrum (Alberto
            Garcia).
          * Fix playback of TZX GDB blocks with no pilot tones (Fredrick
            Meunier).
          * Fix writing GDB blocks with no pilot tones (Fredrick Meunier).
          * Fix handling of 0 length tail pulses after PZX data blocks (Fredrick
            Meunier).
          * TZX spec says that 0 duration pauses should have no effect on the
            current level (Fredrick Meunier).
          * Ensure the first PZX pulse block pulse is marked as high or low
            level as required (Fredrick Meunier).

2016-07-17  Philip Kendall  <philip-fuse@shadowmagic.org.uk>

        * libspectrum 1.2.1 released.

        * Add implementations of g_array_sized_new() and
          g_array_remove_index_fast() for glib replacement (thanks, Sergio
          Baldoví) (Philip Kendall).

2016-06-06  Philip Kendall  <philip-fuse@shadowmagic.org.uk>

        * libspectrum 1.2.0 released.

        * Allow finalising RZX recordings (Sergio Baldoví).

        * Support for Didaktik D80 disk class (Gergely Szasz).

        * Use SZX format for interspersed snapshots in RZX recordings (Sergio
          Baldoví).

        * Add libspectrum_{new,new0,renew}(), libspectrum_{m,re}alloc_n()