@@ -311,6 +311,18 @@ libspectrum_slist_cleanup( void );
 
 void
 libspectrum_hashtable_cleanup( void );
+
+#ifdef HAVE_STDATOMIC_H
+#include <stdatomic.h>
+
+void
+atomic_lock( atomic_char *lock_ptr );
+
+void
+atomic_unlock( atomic_char *lock_ptr );
+
+#endif				/* #ifdef HAVE_STDATOMIC_H */
+
 #endif				/* #ifndef HAVE_LIB_GLIB */
 
 #endif				/* #ifndef LIBSPECTRUM_INTERNALS_H */
