@@ -23,8 +23,11 @@ if USE_MYGLIB
 libspectrum_la_SOURCES += \
 	myglib/garray.c \
 	myglib/ghash.c \
-	myglib/glock.c \
 	myglib/gslist.c
+if HAVE_LOCK
+libspectrum_la_SOURCES += \
+	myglib/glock.c
+endif
 endif
 
 EXTRA_DIST += myglib/Makefile.am
