@@ -36,10 +36,6 @@
 				   `proper' glib */
 #include <string.h>
 
-#ifdef HAVE_STDATOMIC_H
-# include <stdatomic.h>
-#endif
-
 #include "internals.h"
 
 #define HASH_TABLE_SIZE 241
@@ -67,15 +63,18 @@ static GHashNode *node_free_list = NULL;
 static GHashNode *node_allocated_list = NULL;
 
 #ifdef HAVE_STDATOMIC_H
+
 static atomic_char atomic_locker = ATOMIC_VAR_INIT(0);
-extern void atomic_lock(atomic_char *lock_ptr);
-extern void atomic_unlock(atomic_char *lock_ptr);
-# define lock_hash() atomic_lock(&atomic_locker)
-# define unlock_hash() atomic_unlock(&atomic_locker)
-#else
-# define lock_hash()
-# define unlock_hash()
-#endif
+
+#define lock() atomic_lock( &atomic_locker )
+#define unlock() atomic_unlock( &atomic_locker )
+
+#else				/* #ifdef HAVE_STDATOMIC_H */
+
+#define lock()
+#define unlock()
+
+#endif				/* #ifdef HAVE_STDATOMIC_H */
 
 static guint
 g_direct_hash (gconstpointer v)
@@ -137,10 +136,10 @@ g_hash_nodes_destroy (GHashNode *hash_node,
       if (value_destroy_func)
         value_destroy_func (node->value);
 
-      lock_hash();
+      lock();
       node->next = node_free_list;
       node_free_list = hash_node;
-      unlock_hash();
+      unlock();
     }
 }
 
@@ -198,7 +197,7 @@ g_hash_node_new (gpointer key,
   GHashNode *hash_node;
   guint i;
 
-  lock_hash();
+  lock();
   if (!node_free_list)
     {
       node_free_list = libspectrum_malloc (1024 * sizeof (GHashNode));
@@ -212,7 +211,7 @@ g_hash_node_new (gpointer key,
   
   hash_node = node_free_list;
   node_free_list = node_free_list->next;
-  unlock_hash();
+  unlock();
 
   hash_node->key = key;
   hash_node->value = value;
@@ -258,10 +257,10 @@ g_hash_node_destroy (GHashNode *hash_node,
   if (value_destroy_func)
     value_destroy_func (hash_node->value);
 
-  lock_hash();
+  lock();
   hash_node->next = node_free_list;
   node_free_list = hash_node;
-  unlock_hash();
+  unlock();
 }
 
 guint
@@ -369,10 +368,10 @@ g_str_equal (gconstpointer v1,
 void
 libspectrum_hashtable_cleanup( void )
 {
-  lock_hash();
+  lock();
   libspectrum_free( node_allocated_list );
   node_allocated_list = NULL;
   node_free_list = NULL;
-  unlock_hash();
+  unlock();
 }
 #endif				/* #ifndef HAVE_LIB_GLIB */
