@@ -1,3 +1,10 @@
+2016-12-??  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
+
+        * libspectrum 1.3.2 released.
+
+        * Make glib replacement protect global data structures against
+          modification from multiple threads (BogDan Vatra).
+
 2016-11-05  Philip Kendall  <philip-fuse@shadowmagic.org.uk>
 
         * libspectrum 1.3.1 released.
